controller/test/e2e/testdata/backendauth/invalid-jwt-sign.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-backendauth-invalid-jwt-sign
  namespace: agentgateway-base
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "invalid-jwt-sign.example.com"
  rules:
    - backendRefs:
        - name: backend
          port: 80
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: backendauth-invalid-jwt-sign
  namespace: agentgateway-base
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: route-backendauth-invalid-jwt-sign
  backend:
    auth:
      jwtSign:
        signingKeyRef:
          name: jwt-sign-secret-missing
        claims:
          iss: acct.user
